Добавляет новые классы и обертки в разметку

--- a/source/form.html
+++ b/source/form.html
@@ -119,8 +119,8 @@
 
         <div class="user-profile__badge level-badge">
           <p class="level-badge__text">
-            <span class="level-badge__number level-badge__number--big">80</span>
-            <span class="level-badge__label level-badge__label--big">level</span>
+            <span class="user-profile__badge-text level-badge__number level-badge__number--big">80</span>
+            <span class="user-profile__badge-text level-badge__label level-badge__label--big">level</span>
           </p>
           <svg class="level-badge__level-bar level-bar" width="100" height="100" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
             <circle class="level-bar__progress level-bar__progress--user-profile" r="47" cx="50" cy="50" fill="transparent" stroke-dasharray="270" stroke-dashoffset="25" stroke="#FF8D30" stroke-width="3" transform="rotate(-90, 50, 50)" stroke-linecap="round">
@@ -268,48 +268,48 @@
                   </div>
 
                   <div class="calendar__days">
-                    <span class="calendar__day calendar__day--grey" tabindex="0">23</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">24</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">25</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">26</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">27</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">28</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">1</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">2</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">3</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">4</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">5</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">6</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">7</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">8</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">9</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">10</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">11</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">12</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">13</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">14</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">15</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">16</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">17</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">18</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">19</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">20</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">21</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">22</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">23</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">24</span>
-                    <span class="calendar__day calendar__day--grey" tabindex="0">25</span>
-                    <span class="calendar__day calendar__day--picked" tabindex="0">26 <span class="calendar__text">Заезд</span></span>
-                    <span class="calendar__day calendar__day--picked" tabindex="0">27</span>
-                    <span class="calendar__day calendar__day--picked" tabindex="0">28 <span class="calendar__text">Выезд</span></span>
-                    <span class="calendar__day" tabindex="0">29</span>
-                    <span class="calendar__day" tabindex="0">30</span>
-                    <span class="calendar__day" tabindex="0">31</span>
-                    <span class="calendar__day" tabindex="0">1</span>
-                    <span class="calendar__day" tabindex="0">2</span>
-                    <span class="calendar__day" tabindex="0">3</span>
-                    <span class="calendar__day" tabindex="0">4</span>
-                    <span class="calendar__day" tabindex="0">5</span>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">23</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">24</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">25</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">26</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">27</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">28</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">1 <span class="calendar__first-day">мар</span></p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">2</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">3</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">4</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">5</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">6</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">7</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">8</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">9</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">10</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">11</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">12</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">13</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">14</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">15</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">16</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">17</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">18</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">19</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">20</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">21</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">22</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">23</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">24</p>
+                    <p class="calendar__day calendar__day--grey" tabindex="0">25</p>
+                    <p class="calendar__day calendar__day--picked" tabindex="0">26 <span class="calendar__text">Заезд</span></p>
+                    <p class="calendar__day calendar__day--picked" tabindex="0">27</p>
+                    <p class="calendar__day calendar__day--picked" tabindex="0">28 <span class="calendar__text">Выезд</span></p>
+                    <p class="calendar__day" tabindex="0">29</p>
+                    <p class="calendar__day" tabindex="0">30</p>
+                    <p class="calendar__day" tabindex="0">31</p>
+                    <p class="calendar__day" tabindex="0">1 <span class="calendar__first-day">апр</span></p>
+                    <p class="calendar__day" tabindex="0">2</p>
+                    <p class="calendar__day" tabindex="0">3</p>
+                    <p class="calendar__day" tabindex="0">4</p>
+                    <p class="calendar__day" tabindex="0">5</p>
                   </div>
                 </div>
               </fieldset>
@@ -322,7 +322,7 @@
 
               <p class="step__description">Укажите страны, которые вы хотели бы посетить. Это может быть одна или сразу несколько.</p>
 
-              <fieldset class="form__fieldset form__fieldset--no-border step__fieldset">
+              <fieldset class="form__fieldset form__fieldset--no-border step__fieldset step__fieldset--countries">
                 <legend class="visually-hidden">Страны</legend>
 
                 <ul class="form__list select-country">
@@ -430,8 +430,6 @@
                           <label class="select-country__label" for="country-choice-afghanistan">Афганистан</label>
                         </li>
                       </ul>
-
-                      <button class="select-country__close" type="button" aria-label="Закрыть меню выбора страны"></button>
                     </div>
                   </li>
 
@@ -449,13 +447,13 @@
               </div>
             </li>
 
-            <li class="add-plan__step step">
+            <li class="add-plan__step step step--no-side-padding">
               <h3 class="step__title" id="step3"><span class="step__number">Шаг 3.</span> Развлечения</h3>
 
               <p class="step__description">Наконец, расскажите о своих планах времяпровождения. Можно писать в свободной форме и ставить тэги.
               </p>
 
-              <fieldset class="form__fieldset form__fieldset--no-border step__fieldset">
+              <fieldset class="form__fieldset form__fieldset--no-border step__fieldset step__fieldset--descriptions">
                 <legend class="visually-hidden">Описание развлечений</legend>
 
                 <ul class="form__list descriptions">
@@ -471,7 +469,7 @@
                 </ul>
               </fieldset>
 
-              <div class="form__buttons">
+              <div class="step__buttons form__buttons">
                 <button class="form__button button button--index button--short" type="submit">Отправить</button>
                 <a class="form__back-link" href="#step2">На шаг назад</a>
               </div>
