Добавляет вьюпорт и классы кнопкам

--- a/source/form.html
+++ b/source/form.html
@@ -2,6 +2,7 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Погнали — Направления</title>
 
     <link rel="icon" href="favicon.ico">
@@ -319,7 +320,7 @@
                   </div>
                 </fieldset>
 
-                <a class="form__button button button--index button--short" href="#step2">Следующий шаг</a>
+                <a class="form__button button button--index button--mobile-round button--short" href="#step2">Следующий шаг</a>
               </li>
 
               <li class="add-plan__step step">
@@ -447,7 +448,7 @@
                 </fieldset>
 
                 <div class="form__buttons">
-                  <a class="form__button button button--index button--short" href="#step3">Следующий шаг</a>
+                  <a class="form__button button button--index button--mobile-round button--short" href="#step3">Следующий шаг</a>
                   <a class="form__back-link" href="#step1">На шаг назад</a>
                 </div>
               </li>
@@ -475,7 +476,7 @@
                 </fieldset>
 
                 <div class="step__buttons form__buttons">
-                  <button class="form__button button button--index button--short" type="submit">Отправить</button>
+                  <button class="form__button button button--index button--mobile-round button--short" type="submit">Отправить</button>
                   <a class="form__back-link" href="#step2">На шаг назад</a>
                 </div>
               </li>
