--- a/source/form.html
+++ b/source/form.html
@@ -110,8 +110,8 @@
       </div>
     </header>
 
-    <main class="page-main page-main--inner page-main--no-js">
-      <div class="page-main__title-container page-main__title-container--yellow-corners">
+    <main class="page-main page-main--inner page-main--yellow-corners page-main--no-js">
+      <div class="page-main__title-container">
         <div class="page-main__title-wrapper wrapper">
           <h1 class="page-main__title page-main__title--main">Направления</h1>
         </div>
