--- a/source/catalog.html
+++ b/source/catalog.html
@@ -129,7 +129,7 @@
         <div class="filter-country__tabs-container">
           <div class="filter-country__wrapper wrapper">
             <h2 class="page-main__title page-main__title--uppercase page-main__title--no-margin filter-country__title">Фильтрация по странам:</h2>
-            <button class="filter-country__button button button--blue button--fading button--dots" type="button"><span class="filter-country__button-text button__text">Показать все</span>  •••</button>
+            <button class="filter-country__button button button--blue button--fading button--dots" type="button"><span class="filter-country__button-text button__text">Показать все</span>•••</button>
 
             <ul class="filter-country__tabs">
               <li class="filter-country__tab filter-country__tab--current">
@@ -973,7 +973,7 @@
               <div class="traveler-card__countries traveler-info">
                 <h4 class="traveler-info__title">Хочет посетить:</h4>
 
-                <ul class="traveler-info__list traveler-info__list--padding">
+                <ul class="traveler-info__list traveler-info__list--countries traveler-info__list--padding">
                   <li class="traveler-info__item">
                     <span class="country country--sri-lanka">Шри-Ланка</span>
                   </li>
@@ -1073,7 +1073,7 @@
               <div class="traveler-card__countries traveler-info">
                 <h4 class="traveler-info__title">Хочет посетить:</h4>
 
-                <ul class="traveler-info__list traveler-info__list--padding">
+                <ul class="traveler-info__list traveler-info__list--countries traveler-info__list--padding">
                   <li class="traveler-info__item">
                     <span class="country country--belgium">Бельгия</span>
                   </li>
@@ -1169,7 +1169,7 @@
               <div class="traveler-card__countries traveler-info">
                 <h4 class="traveler-info__title">Хочет посетить:</h4>
 
-                <ul class="traveler-info__list traveler-info__list--padding">
+                <ul class="traveler-info__list traveler-info__list--countries traveler-info__list--padding">
                   <li class="traveler-info__item">
                     <span class="country country--usa">США</span>
                   </li>
@@ -1268,7 +1268,7 @@
               <div class="traveler-card__countries traveler-info">
                 <h4 class="traveler-info__title">Хочет посетить:</h4>
 
-                <ul class="traveler-info__list traveler-info__list--padding">
+                <ul class="traveler-info__list traveler-info__list--countries traveler-info__list--padding">
                   <li class="traveler-info__item">
                     <span class="country country--uk">Великобритания</span>
                   </li>
