Прижимает футер к низу при любом количестве контента

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -14,7 +14,7 @@
   </head>
 
   <body class="page-body page-body--inner">
-    <header class="page-header">
+    <header class="page-body__header page-header">
       <div class="page-header__top-bar top-bar top-bar--no-js">
         <a class="top-bar__logo logo" href="index.html" aria-label="Перейти на главную страницу">
           <img src="img/logo_mobile_blue.png" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
@@ -117,7 +117,7 @@
       </div>
     </header>
 
-    <main class="page-main page-main--inner page-main--no-js">
+    <main class="page-body__content page-main page-main--inner page-main--no-js">
       <div class="page-main__title-container">
         <div class="page-main__title-wrapper wrapper">
           <h1 class="page-main__title page-main__title--main">Попутчики</h1>
@@ -1374,7 +1374,7 @@
       </section>
     </main>
 
-    <footer class="page-footer">
+    <footer class="page-body__footer page-footer">
       <div class="page-footer__wrapper wrapper">
         <a class="page-footer__logo logo" href="index.html" aria-label="Перейти на главную страницу">
           <img src="img/logo_mobile_blue.png" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
