--- a/source/form.html
+++ b/source/form.html
@@ -14,7 +14,7 @@
   </head>
 
   <body class="page-body page-body--inner">
-    <header class="page-header page-header--inner">
+    <header class="page-body__header page-header page-header--inner">
       <div class="page-header__top-bar top-bar top-bar--no-js">
         <a class="top-bar__logo logo" href="index.html" aria-label="Перейти на главную страницу">
           <img src="img/logo_mobile_blue.png" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
@@ -110,7 +110,7 @@
       </div>
     </header>
 
-    <main class="page-main page-main--inner page-main--yellow-corners page-main--no-js">
+    <main class="page-body__content page-main page-main--inner page-main--yellow-corners page-main--no-js">
       <div class="page-main__title-container">
         <div class="page-main__title-wrapper wrapper">
           <h1 class="page-main__title page-main__title--main">Направления</h1>
@@ -486,7 +486,7 @@
       </section>
     </main>
 
-    <footer class="page-footer page-footer--move-up">
+    <footer class="page-body__footer page-footer page-footer--move-up">
       <div class="page-footer__wrapper wrapper">
         <a class="page-footer__logo logo" href="index.html" aria-label="Перейти на главную страницу">
           <img src="img/logo_mobile_blue.png" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
