--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
   </head>
 
   <body class="page-body">
-    <header class="page-header">
+    <header class="page-body__header page-header">
       <div class="page-header__top-bar top-bar top-bar--no-js">
         <a class="top-bar__logo logo" href="index.html" aria-label="Перейти на главную страницу">
           <img src="img/logo_mobile_blue.png" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
@@ -110,7 +110,7 @@
       </div>
     </header>
 
-    <main class="page-main page-main--no-js">
+    <main class="page-body__content page-main page-main--no-js">
       <h1 class="visually-hidden">Сервис поиска попутчиков «Погнали»</h1>
 
       <section class="page-main__section page-main__section--top promo">
@@ -450,7 +450,7 @@
       </section>
     </main>
 
-    <footer class="page-footer page-footer--move-up">
+    <footer class="page-body__footer page-footer page-footer--move-up">
       <div class="page-footer__wrapper wrapper">
         <a class="page-footer__logo logo" href="index.html" aria-label="Перейти на главную страницу">
           <img src="img/logo_mobile_blue.png" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
