--- a/source/form.html
+++ b/source/form.html
@@ -125,7 +125,7 @@
             <span class="user-profile__badge-text level-badge__number level-badge__number--big">80</span>
             <span class="user-profile__badge-text level-badge__label level-badge__label--big">level</span>
           </p>
-          <svg class="level-badge__level-bar level-bar" width="100" height="100" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
+          <svg class="level-badge__level-bar level-bar" width="100" height="100" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
             <circle class="level-bar__progress level-bar__progress--user-profile" r="47" cx="50" cy="50" fill="transparent" stroke-dasharray="270" stroke-dashoffset="25" stroke="#FF8D30" stroke-width="3" transform="rotate(-90, 50, 50)" stroke-linecap="round">
             </circle>
           </svg>
@@ -496,8 +496,7 @@
           <li class="socials__item">
             <a class="socials__link socials__link--yellow-bg" href="#" target="_blank"
               aria-label="Перейти на страницу «Погнали» в Фейсбуке">
-              <svg width="14" height="28" viewBox="0 0 14 28" fill="none" xmlns="http://www.w3.org/2000/svg" role="img"
-                aria-hidden="true" focusable="false">
+              <svg width="14" height="28" viewBox="0 0 14 28" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
                 <path class="socials__icon"
                   d="M9.5 27.8H2.7v-13H0V8.6h2.6c-.2-3 .3-5 1.6-6.5a6.2 6.2 0 014.5-2h4.8v6.2H9.8c-.3.7-.3 1.5-.3 2.3h4v6.3h-4v13zm-5.3-1.6H8V13.4h4V10H8v-.8c0-2 0-3.7 1-4.4l.2-.1H12V1.5H8.8A4.7 4.7 0 005.3 3c-1 1.2-1.4 3.3-1.1 6.1v.9H1.6v3.3h2.7v13z"
                   fill="#192144" />
