--- a/source/index.html
+++ b/source/index.html
@@ -227,7 +227,7 @@
 
                 <ul class="companion-card__transport-list transport-list">
                   <li class="transport-list__item">
-                    <svg class="transport-list__icon transport-list__icon--active" width="23" height="22" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Путешествия на самолёте">
+                    <svg class="transport-list__icon transport-list__icon--active" width="23" height="22" viewBox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Путешествия на самолёте">
                       <path
                         d="M18.5 1.2c-.8.2-1.6.3-1.9.8l-2.3 4.4L1.8 9.2l-.5 1.4 9.6.9-1.7 3.8-3.6.8-.9 1.5 2.6.2.3 1.2c.1.5.6.8 1 .7l1.2-.3 1.4 2.2 1-1.4-1-3.7 2.7-3.1 5 8.2 1-1L16.8 8l2.8-4c.3-.6.1-1.4 0-2.2-.2-.4-.7-.7-1-.6z"/>
                     </svg>
@@ -236,7 +236,7 @@
                     </div>
                   </li>
                   <li class="transport-list__item">
-                    <svg class="transport-list__icon" width="18" height="20" fill="none" xmlns="http://www.w3.org/2000/svg"  aria-label="Путешествия на автотранспорте">
+                    <svg class="transport-list__icon" width="18" height="20" viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg"  aria-label="Путешествия на автотранспорте">
                       <path
                         d="M4.5 13.57c0-.4-.15-.73-.44-1-.3-.29-.64-.43-1.06-.43-.41 0-.77.14-1.06.42-.3.28-.44.62-.44 1.01 0 .4.15.73.44 1.01.3.28.65.42 1.06.42.42 0 .77-.14 1.06-.42.3-.28.44-.61.44-1zm12 0c0-.4-.15-.73-.44-1-.3-.29-.65-.43-1.06-.43-.42 0-.77.14-1.06.42-.3.28-.44.62-.44 1.01 0 .4.14.73.44 1.01.29.28.64.42 1.06.42.41 0 .76-.14 1.06-.42.29-.28.44-.61.44-1zm-.54-4.42l-.85-4.28a.74.74 0 00-.74-.58H3.63a.74.74 0 00-.74.58l-.84 4.28c-.04.22.02.42.17.6.14.16.33.25.57.25h12.44c.23 0 .42-.09.57-.26.15-.17.2-.37.17-.59zM13.3 2.32a.5.5 0 00-.16-.38.56.56 0 00-.4-.15h-7.5a.56.56 0 00-.4.15.5.5 0 00-.16.38c0 .15.05.28.16.38.11.1.24.16.4.16h7.5c.15 0 .29-.05.4-.16a.5.5 0 00.16-.38zm4.69 8.1v6.72h-1.5v1.43c0 .4-.15.73-.44 1.01-.3.28-.65.42-1.06.42-.42 0-.77-.14-1.06-.42-.3-.28-.44-.61-.44-1v-1.44h-9v1.43c0 .4-.15.73-.44 1.01-.3.28-.64.42-1.06.42-.41 0-.77-.14-1.06-.42-.3-.28-.44-.61-.44-1v-1.44H0v-6.73c0-.83.1-1.66.3-2.49l1.2-5.06c.07-.58.45-1.1 1.14-1.53.7-.44 1.6-.77 2.7-1C6.44.11 7.66 0 9 0c1.33 0 2.55.11 3.66.33 1.1.23 2 .56 2.7 1 .69.44 1.07.95 1.14 1.53l1.23 5.06c.18.76.27 1.6.27 2.5z"/>
                     </svg>
@@ -245,7 +245,7 @@
                     </div>
                   </li>
                   <li class="transport-list__item">
-                    <svg class="transport-list__icon" width="25" height="25" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Путешествия на велосипеде">
+                    <svg class="transport-list__icon" width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Путешествия на велосипеде">
                       <path
                         d="M18.95 21.88a4.5 4.5 0 110-8.99 4.5 4.5 0 010 8.98zm0-7.43a2.93 2.93 0 100 5.86 2.93 2.93 0 000-5.86zM6.05 21.88a4.5 4.5 0 110-8.99 4.5 4.5 0 010 8.98zm0-7.43a2.93 2.93 0 100 5.86 2.93 2.93 0 000-5.86zM15.63 6.25a1.56 1.56 0 001.56-1.57 1.54 1.54 0 00-2.15-1.44 1.56 1.56 0 00.59 3.01z"/>
                       <path
@@ -256,7 +256,7 @@
                     </div>
                   </li>
                   <li class="transport-list__item">
-                    <svg class="transport-list__icon" width="22" height="24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Путешествия пешком">
+                    <svg class="transport-list__icon" width="22" height="24" viewBox="0 0 22 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Путешествия пешком">
                       <path
                         d="M15.45 6c1 0 1.82-.9 1.82-2s-.81-2-1.82-2c-1 0-1.81.9-1.81 2s.81 2 1.81 2zM14.34 10.97c.21.34.51.6.86.75.35.15.73.18 1.1.08l3.01-.83-.44-1.94-3.01.83-1.26-2.07a1.83 1.83 0 00-1.15-.85l-3.5-.77c-.4-.09-.8-.03-1.16.16-.35.2-.64.51-.82.9l-1.51 3.32 1.63.9 1.5-3.32 1.8.4L6.75 17H2.73v2h4.03a1.8 1.8 0 001.56-.97l1.74-3.2 4.7 1.04 1.65 5.45 1.72-.64-1.65-5.45c-.1-.33-.28-.63-.52-.86-.24-.24-.53-.4-.84-.46l-2.77-.61 1.61-2.96.38.63z"/>
                     </svg>
@@ -272,10 +272,8 @@
                   <span class="level-badge__number level-badge__number--white">99</span>
                   <span class="level-badge__label level-badge__label--white">level</span>
                 </p>
-                <svg class="level-badge__level-bar level-bar" width="60" height="60" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
-                  <circle class="level-bar__progress level-bar__progress--companion-card" r="28" cx="30" cy="30" fill="transparent" stroke-dasharray="270"
-                    stroke-dashoffset="105" stroke="#FF8D30" stroke-width="4" transform="rotate(-90, 30, 30)" stroke-linecap="round">
-                  </circle>
+                <svg class="level-badge__level-bar level-bar" width="60" height="60" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
+                  <circle class="level-bar__progress level-bar__progress--companion-card" r="28" cx="30" cy="30" fill="transparent" stroke-dasharray="270" stroke-dashoffset="105" stroke="#FF8D30" stroke-width="4" transform="rotate(-90, 30, 30)" stroke-linecap="round"></circle>
                 </svg>
               </div>
             </li>
@@ -307,7 +305,7 @@
 
                 <ul class="companion-card__transport-list transport-list">
                   <li class="transport-list__item">
-                    <svg class="transport-list__icon transport-list__icon--active" width="23" height="22" fill="none"
+                    <svg class="transport-list__icon transport-list__icon--active" width="23" height="22" viewBox="0 0 23 22" fill="none"
                       xmlns="http://www.w3.org/2000/svg" aria-label="Путешествия на самолёте">
                       <path
                         d="M18.5 1.2c-.8.2-1.6.3-1.9.8l-2.3 4.4L1.8 9.2l-.5 1.4 9.6.9-1.7 3.8-3.6.8-.9 1.5 2.6.2.3 1.2c.1.5.6.8 1 .7l1.2-.3 1.4 2.2 1-1.4-1-3.7 2.7-3.1 5 8.2 1-1L16.8 8l2.8-4c.3-.6.1-1.4 0-2.2-.2-.4-.7-.7-1-.6z"/>
@@ -317,7 +315,7 @@
                     </div>
                   </li>
                   <li class="transport-list__item">
-                    <svg class="transport-list__icon transport-list__icon--active" width="18" height="20" fill="none" xmlns="http://www.w3.org/2000/svg"
+                    <svg class="transport-list__icon transport-list__icon--active" width="18" height="20" viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg"
                       aria-label="Путешествия на автотранспорте">
                       <path
                         d="M4.5 13.57c0-.4-.15-.73-.44-1-.3-.29-.64-.43-1.06-.43-.41 0-.77.14-1.06.42-.3.28-.44.62-.44 1.01 0 .4.15.73.44 1.01.3.28.65.42 1.06.42.42 0 .77-.14 1.06-.42.3-.28.44-.61.44-1zm12 0c0-.4-.15-.73-.44-1-.3-.29-.65-.43-1.06-.43-.42 0-.77.14-1.06.42-.3.28-.44.62-.44 1.01 0 .4.14.73.44 1.01.29.28.64.42 1.06.42.41 0 .76-.14 1.06-.42.29-.28.44-.61.44-1zm-.54-4.42l-.85-4.28a.74.74 0 00-.74-.58H3.63a.74.74 0 00-.74.58l-.84 4.28c-.04.22.02.42.17.6.14.16.33.25.57.25h12.44c.23 0 .42-.09.57-.26.15-.17.2-.37.17-.59zM13.3 2.32a.5.5 0 00-.16-.38.56.56 0 00-.4-.15h-7.5a.56.56 0 00-.4.15.5.5 0 00-.16.38c0 .15.05.28.16.38.11.1.24.16.4.16h7.5c.15 0 .29-.05.4-.16a.5.5 0 00.16-.38zm4.69 8.1v6.72h-1.5v1.43c0 .4-.15.73-.44 1.01-.3.28-.65.42-1.06.42-.42 0-.77-.14-1.06-.42-.3-.28-.44-.61-.44-1v-1.44h-9v1.43c0 .4-.15.73-.44 1.01-.3.28-.64.42-1.06.42-.41 0-.77-.14-1.06-.42-.3-.28-.44-.61-.44-1v-1.44H0v-6.73c0-.83.1-1.66.3-2.49l1.2-5.06c.07-.58.45-1.1 1.14-1.53.7-.44 1.6-.77 2.7-1C6.44.11 7.66 0 9 0c1.33 0 2.55.11 3.66.33 1.1.23 2 .56 2.7 1 .69.44 1.07.95 1.14 1.53l1.23 5.06c.18.76.27 1.6.27 2.5z"/>
@@ -327,7 +325,7 @@
                     </div>
                   </li>
                   <li class="transport-list__item">
-                    <svg class="transport-list__icon" width="25" height="25" fill="none" xmlns="http://www.w3.org/2000/svg"
+                    <svg class="transport-list__icon" width="25" height="25" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg"
                       aria-label="Путешествия на велосипеде">
                       <path
                         d="M18.95 21.88a4.5 4.5 0 110-8.99 4.5 4.5 0 010 8.98zm0-7.43a2.93 2.93 0 100 5.86 2.93 2.93 0 000-5.86zM6.05 21.88a4.5 4.5 0 110-8.99 4.5 4.5 0 010 8.98zm0-7.43a2.93 2.93 0 100 5.86 2.93 2.93 0 000-5.86zM15.63 6.25a1.56 1.56 0 001.56-1.57 1.54 1.54 0 00-2.15-1.44 1.56 1.56 0 00.59 3.01z"/>
@@ -339,7 +337,7 @@
                     </div>
                   </li>
                   <li class="transport-list__item">
-                    <svg class="transport-list__icon transport-list__icon--active" width="22" height="24" fill="none" xmlns="http://www.w3.org/2000/svg"
+                    <svg class="transport-list__icon transport-list__icon--active" width="22" height="24" viewBox="0 0 22 24" fill="none" xmlns="http://www.w3.org/2000/svg"
                       aria-label="Путешествия пешком">
                       <path
                         d="M15.45 6c1 0 1.82-.9 1.82-2s-.81-2-1.82-2c-1 0-1.81.9-1.81 2s.81 2 1.81 2zM14.34 10.97c.21.34.51.6.86.75.35.15.73.18 1.1.08l3.01-.83-.44-1.94-3.01.83-1.26-2.07a1.83 1.83 0 00-1.15-.85l-3.5-.77c-.4-.09-.8-.03-1.16.16-.35.2-.64.51-.82.9l-1.51 3.32 1.63.9 1.5-3.32 1.8.4L6.75 17H2.73v2h4.03a1.8 1.8 0 001.56-.97l1.74-3.2 4.7 1.04 1.65 5.45 1.72-.64-1.65-5.45c-.1-.33-.28-.63-.52-.86-.24-.24-.53-.4-.84-.46l-2.77-.61 1.61-2.96.38.63z"/>
@@ -356,7 +354,7 @@
                   <span class="level-badge__number level-badge__number--white">80</span>
                   <span class="level-badge__label level-badge__label--white">level</span>
                 </p>
-                <svg class="level-badge__level-bar level-bar" width="60" height="60" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
+                <svg class="level-badge__level-bar level-bar" width="60" height="60" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
                   <circle class="level-bar__progress level-bar__progress--companion-card" r="28" cx="30" cy="30" fill="transparent" stroke-dasharray="270"
                     stroke-dashoffset="125" stroke="#FF8D30" stroke-width="4" transform="rotate(-90, 30, 30)"
                     stroke-linecap="round">
