--- a/source/index.html
+++ b/source/index.html
@@ -64,7 +64,7 @@
             </li>
           </ul>
 
-          <ul class="menu__socials socials">
+          <ul class="menu__socials socials socials--menu">
             <li class="socials__item">
               <a class="socials__link" href="#" target="_blank" aria-label="Перейти на страницу «Погнали» в Фейсбуке">
                 <svg width="14" height="28" viewBox="0 0 14 28" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
@@ -117,18 +117,17 @@
         <h2 class="visually-hidden">Промо-блок</h2>
 
         <div class="promo__wrapper wrapper">
-          <p class="promo__slogan">В путешествие с крутыми попутчиками!</p>
+          <p class="promo__slogan">В путешествие с&nbsp;крутыми попутчиками!</p>
 
           <blockquote class="promo__review review">
-            <p class="review__quote">«Лучшее приложение, что я видел в жизни!»</p>
-            <cite class="review__author">Мурат Эльтазин<br>
-              главный редактор газеты «гаджетлайф»</cite>
+            <p class="review__quote">«Лучшее приложение,<br>что я видел в жизни!»</p>
+            <cite class="review__author">Мурат Эльтазин<br>главный редактор<br class="review__author-break">газеты «гаджетлайф»</cite>
           </blockquote>
 
           <ul class="promo__features features">
             <li class="features__item">Выберите направление</li>
             <li class="features__item">Изучите идеи путешественников</li>
-            <li class="features__item">Находите тех, кто похож на вас</li>
+            <li class="features__item">Находите тех,<br>кто похож на вас</li>
             <li class="features__item">Путешествуйте вместе!</li>
           </ul>
         </div>
@@ -176,7 +175,7 @@
                 alt="Фотография с Карловым мостом и пражской архитектурой на заднем плане, на переднем плане плывет красно-белый речной трамвай">
               <div class="country-card__container">
                 <h3 class="country-card__name country-card__name--czech">Чехия</h3>
-                <p class="country-card__slogan">Закоулки старой Европы</p>
+                <p class="country-card__slogan country-card__slogan--two-lines">Закоулки старой Европы</p>
                 <p class="country-card__counter">5326</p>
               </div>
             </li>
@@ -393,7 +392,7 @@
 
       <section class="page-main__section page-main__section--dark feedback">
         <h2 class="page-main__title page-main__title--orange feedback__title">Заинтересовались?</h2>
-        <p class="feedback__text">Зарегистрируйтесь, это быстро и бесплатно!<br>
+        <p class="feedback__text">Зарегистрируйтесь,<br class="feedback__text-break">это быстро и бесплатно!<br>
           Уже зарегистрированы? Тогда скорее <a class="feedback__login-link" href="blank.html">авторизуйтесь</a>.</p>
 
         <form class="feedback__form feedback-form" method="POST" action="https://echo.htmlacademy.ru/">
@@ -404,7 +403,7 @@
           </button>
         </form>
 
-        <p class="feedback__text">Остались вопросы? Мы с радостью на них ответим!</p>
+        <p class="feedback__text">Остались вопросы?<br class="feedback__text-break">Мы с радостью на них ответим!</p>
 
         <ul class="feedback__contacts contacts">
           <li class="contacts__item">
@@ -454,7 +453,7 @@
           <img src="img/logo_mobile_blue.png" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
         </a>
 
-        <ul class="page-footer__socials socials">
+        <ul class="page-footer__socials socials socials--footer">
           <li class="socials__item">
             <a class="socials__link socials__link--yellow-bg" href="#" target="_blank" aria-label="Перейти на страницу «Погнали» в Фейсбуке">
               <svg width="14" height="28" viewBox="0 0 14 28" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
