--- a/source/index.html
+++ b/source/index.html
@@ -121,14 +121,14 @@
 
           <blockquote class="promo__review review">
             <p class="review__quote">«Лучшее приложение,<br>что я видел в жизни!»</p>
-            <cite class="review__author">Мурат Эльтазин<br>главный редактор<br class="review__author-break">газеты «гаджетлайф»</cite>
+            <cite class="review__author">Мурат Эльтазин<br>главный редактор <br class="review__author-break">газеты «гаджетлайф»</cite>
           </blockquote>
 
           <ul class="promo__features features">
-            <li class="features__item">Выберите направление</li>
-            <li class="features__item">Изучите идеи путешественников</li>
+            <li class="features__item">Выберите<br>направление</li>
+            <li class="features__item">Изучите идеи<br>путешественников</li>
             <li class="features__item">Находите тех,<br>кто похож на вас</li>
-            <li class="features__item">Путешествуйте вместе!</li>
+            <li class="features__item">Путешествуйте<br>вместе!</li>
           </ul>
         </div>
       </section>
@@ -137,7 +137,7 @@
         <div class="page-main__wrapper about__wrapper wrapper">
           <h2 class="page-main__title page-main__title--orange about__title">О сервисе</h2>
 
-          <p class="about__text">Любое путешествие веселее с&nbsp;попутчиками, которые на одной волне с&nbsp;тобой! Делитесь своими идеями путешествий и черпайте вдохновение в&nbsp;чужих.</p>
+          <p class="about__text">Любое путешествие веселее с&nbsp;попутчиками, которые на одной волне с&nbsp;тобой! Делитесь своими идеями путешествий <br class="about__text-break">и черпайте вдохновение в&nbsp;чужих.</p>
           <p class="about__text about__text--bold">А если найдете кого-то близкого по духу — скорее зовите в совместный трип!</p>
 
           <a class="about__button button button--index button--normalcase" href="blank.html">Подробнее</a>
@@ -189,8 +189,8 @@
         <div class="page-main__wrapper companions__wrapper wrapper">
           <h2 class="page-main__title page-main__title--orange companions__title">Попутчики</h2>
 
-          <p class="companions__text">Все мы индивидуальны и у каждого свой взгляд на идеальный отдых. Одному нужен пляж и коктейль, а другому маршрут для хайкинга.</p>
-          <p class="companions__text companions__text--bold">Теперь можно легко найти единомышленников!</p>
+          <p class="companions__text">Все мы индивидуальны и у каждого свой взгляд на идеальный отдых. Одному нужен пляж и коктейль, <br class="companions__text-break">а другому маршрут для хайкинга.</p>
+          <p class="companions__text companions__text--bold">Теперь можно легко <br class="companions__text-break">найти единомышленников!</p>
 
           <ul class="companions__list">
             <li class="companions__item companion-card">
@@ -281,8 +281,8 @@
               <img class="companion-card__avatar" src="img/avatars/petya-demin.jpg" width="270" height="270" alt="Аватар Пети Демина: бородатый мужчина в шапке и темных очках на фоне снега">
 
               <div class="companion-card__info">
-                <h3 class="companion-card__name companion-card__name--online">
-                  <a class="companion-card__link" href="blank.html">Петя Демин</a>
+                <h3 class="companion-card__name">
+                  <a class="companion-card__link companion-card__link--online" href="blank.html">Петя Демин</a>
                 </h3>
 
                 <p class="companion-card__tags companion-card__tags--centered">#бургер #бар #футбол #концерт #крафт</p>
@@ -392,7 +392,7 @@
 
       <section class="page-main__section page-main__section--dark feedback">
         <h2 class="page-main__title page-main__title--orange feedback__title">Заинтересовались?</h2>
-        <p class="feedback__text">Зарегистрируйтесь,<br class="feedback__text-break">это быстро и бесплатно!<br>
+        <p class="feedback__text">Зарегистрируйтесь, <br class="feedback__text-break">это быстро и бесплатно!<br>
           Уже зарегистрированы? Тогда скорее <a class="feedback__login-link" href="blank.html">авторизуйтесь</a>.</p>
 
         <form class="feedback__form feedback-form" method="POST" action="https://echo.htmlacademy.ru/">
@@ -403,7 +403,7 @@
           </button>
         </form>
 
-        <p class="feedback__text">Остались вопросы?<br class="feedback__text-break">Мы с радостью на них ответим!</p>
+        <p class="feedback__text">Остались вопросы? <br class="feedback__text-break">Мы с радостью на них ответим!</p>
 
         <ul class="feedback__contacts contacts">
           <li class="contacts__item">
