Adds modificator class to modal table

--- a/source/index.html
+++ b/source/index.html
@@ -498,7 +498,7 @@
     <div class="modal modal--business-rates">
       <h2 class="modal__title modal__title--orange">Бизнес-тарифы</h2>
 
-      <table class="modal__table table">
+      <table class="modal__table table table--modal">
         <tr class="table__row">
           <td class="table__feature">Реклама у блоггера</td>
           <td class="table__cost">300 000 руб./пост</td>
