Adds non-breaking hyphen in tooltips

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -975,7 +975,7 @@
 
                 <ul class="traveler-info__list traveler-info__list--countries traveler-info__list--padding">
                   <li class="traveler-info__item">
-                    <span class="country country--sri-lanka">Шри-Ланка</span>
+                    <span class="country country--sri-lanka">Шри&#8209;Ланка</span>
                   </li>
                   <li class="traveler-info__item">
                     <span class="country country--thailand">Таиланд</span>
