--- a/source/index.html
+++ b/source/index.html
@@ -207,7 +207,7 @@
                   <li class="flags-list__item">
                     <img class="flags-list__flag" src="img/flags/Sri-Lanka.png" width="35" height="25" alt="Флаг Шри-Ланки">
                     <div class="flags-list__tooltip tooltip" aria-hidden="true">
-                      <span class="tooltip__text">Шри-Ланка</span>
+                      <span class="tooltip__text">Шри&#8209;Ланка</span>
                     </div>
                   </li>
                   <li class="flags-list__item">
