Adds breaks and a class to step buttons container

--- a/source/form.html
+++ b/source/form.html
@@ -224,7 +224,7 @@
               <li class="add-plan__step step step--first step--current">
                 <h3 class="step__title" id="step1"><span class="step__number">Шаг 1.</span> Даты пребывания</h3>
 
-                <p class="step__description">Укажите предпочтительное количество попутчиков, которых вы хотели бы позвать в поездку, и ее предполагаемую длительность.</p>
+                <p class="step__description">Укажите предпочтительное количество попутчиков, которых<br>вы хотели бы позвать в поездку, и ее предполагаемую длительность.</p>
 
                 <fieldset class="form__fieldset form__fieldset--no-border step__fieldset">
                   <legend class="visually-hidden">Попутчики</legend>
@@ -447,7 +447,7 @@
                   </ul>
                 </fieldset>
 
-                <div class="form__buttons">
+                <div class="step__buttons form__buttons">
                   <a class="form__button button button--index button--mobile-round button--short" href="#step3">Следующий шаг</a>
                   <a class="form__back-link" href="#step1">На шаг назад</a>
                 </div>
@@ -456,7 +456,7 @@
               <li class="add-plan__step step step--third step--no-side-padding">
                 <h3 class="step__title" id="step3"><span class="step__number">Шаг 3.</span> Развлечения</h3>
 
-                <p class="step__description">Наконец, расскажите о своих планах времяпровождения. Можно писать в свободной форме и ставить тэги.
+                <p class="step__description">Наконец, расскажите о своих планах времяпровождения.<br>Можно писать в свободной форме и ставить тэги.
                 </p>
 
                 <fieldset class="form__fieldset form__fieldset--no-border step__fieldset step__fieldset--descriptions">
