Fixes typo in .step__description-break class name

--- a/source/form.html
+++ b/source/form.html
@@ -326,7 +326,7 @@
               <li class="add-plan__step step step--second">
                 <h3 class="step__title" id="step2"><span class="step__number">Шаг 2.</span> Маршрут</h3>
 
-                <p class="step__description">Укажите страны, которые вы хотели бы посетить. <br class="step_description-break">Это может быть одна или сразу несколько.</p>
+                <p class="step__description">Укажите страны, которые вы хотели бы посетить. <br class="step__description-break">Это может быть одна или сразу несколько.</p>
 
                 <fieldset class="form__fieldset form__fieldset--no-border step__fieldset step__fieldset--countries">
                   <legend class="visually-hidden">Страны</legend>
